Changelog 2021 Jan 22:
    -Audio encoding has been migrated to Opus instead of MP3 for lower CPU usage
    -The audio caches are now merged, meaning the bot can queue/play songs considerably faster if they're already cached.
    -The audio cache can now be deleted via the bot owner's DMs
    -Songs with their files deleted will now redownload the file rather than throwing an error
    
Changelog 2021 Jan 21:
    -Bot commands only register in channels starting with 'bot', 'basic', or user DMs. force-delete channels are still deleted.
    -Youtube audio caching optimized, the bot will no longer redownload audio files.
    -Two new easter eggs, including a new sound for when the bot joins (occurs only when audio is not queued)
    -Youtube audio requests now have a maximum time: 1 hour (+1 minute allowed). Requests over 1 hour will not be queued/played
    
Changelog 2021 Jan 20:
    -Each server stores its queue in a separate folder
    -Fixed issue where all song queues would be merged together
    -Cached songs get deleted at the end of a song queue (Pending removal for efficiency reasons)
    -Leave and Join sounds interrupt each other
    -Youtube URL pattern 'app=desktop&' removed from argument
    -config.txt removed in favor of .env
    
Changelog 2021 Jan 19:
    -Shutdowns via owner DMs or terminate code clear the YouTube cache
    -Queue system added, some bugs dealing with multiple servers
    -Exception handling takes care of deleted MP3s before playing

Changelog 2021 Jan 18:
    -Message privacy has been improved, deleted messages are no longer printed to terminal
    -Join/Leave detection works in multiple servers
    -Pause/Resume/Stop work in multple voice chats
    -Censored keywords are now stored in global-censored.txt instead of global-censored-RH.txt
    -Censored messages in force-delete channels do not register as commands
    
Changelog 2021 Jan 17:
    -!basic_pingme command added: pings the user
    -!basic_help has been reformatted